syntax = "proto3";

option csharp_namespace = "Picture.StaticResource.API.Proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package PictureResourceApi;

service PictureResourceGrpc {
	rpc StoreAndSaveImages(TemporaryPictureGrpcRequest) returns (PictureGrpcDtoResponse) {}
}

message TemporaryPictureGrpcRequest {
	repeated string temporaryFilePath = 1;
}

message PictureGrpcDtoResponse {
	repeated PictureGrpcDto pictureDtos = 1;
}

message PictureGrpcDto
{
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue fileName = 2;
	google.protobuf.StringValue filePath = 3;
	google.protobuf.Int64Value  size = 4;
	google.protobuf.Int32Value  displayOrder = 5;
	google.protobuf.Int32Value  pictureType = 6;
	google.protobuf.StringValue extension = 7;
	google.protobuf.StringValue redirectLink = 8;
	google.protobuf.StringValue temporaryUrl = 9;
	int32 id = 10;
}
